Initial kitty.conf commit... - Still in infancy

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -713,7 +713,7 @@
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -734,7 +734,7 @@
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on linux.
 
-# bell_on_tab "🔔 "
+bell_on_tab "🔔 "
 
 #: Some text or a Unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has a bell. If you want to use leading
@@ -966,7 +966,7 @@
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -992,12 +992,12 @@
 #:     a mapping for the select_tab action which presents you with a list of
 #:     tabs and allows for easy switching to a tab.
 
-# tab_bar_align left
+tab_bar_align left
 
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
 
-# tab_bar_min_tabs 2
+tab_bar_min_tabs 2
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown.
@@ -1010,7 +1010,7 @@
 #: closed tab. A value of right will switch to the tab to the right of
 #: the closed tab. A value of last will switch to the right-most tab.
 
-# tab_fade 0.25 0.5 0.75 1
+tab_fade 0.25 0.5 0.75 1
 
 #: Control how each tab fades into the background when using fade for
 #: the tab_bar_style. Each number is an alpha (between zero and one)
@@ -1089,16 +1089,16 @@
 #: Template to use for active tabs. If not specified falls back to
 #: tab_title_template.
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
-# active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
-# inactive_tab_font_style normal
+active_tab_foreground   #000000
+active_tab_background   #05989a
+active_tab_font_style   bold-italic
+inactive_tab_foreground #701d63
+inactive_tab_background #2b5c5d
+inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
 
-# tab_bar_background none
+tab_bar_background #2c4141
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -1114,8 +1114,8 @@
 
 #: Color scheme {{{
 
-# foreground #dddddd
-# background #000000
+foreground #b7bab4
+background #2e3436
 
 #: The foreground and background colors.
 
@@ -1579,7 +1579,7 @@
 
 #: OS specific tweaks {{{
 
-# wayland_titlebar_color system
+wayland_titlebar_color system
 
 #: The color of the kitty window's titlebar on Wayland systems with
 #: client side window decorations such as GNOME. A value of system
