--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -278,7 +278,7 @@
 #: the cursor shape to beam at shell prompts. You can avoid this by
 #: setting shell_integration to no-cursor.
 
-# cursor_beam_thickness 1.5
+cursor_beam_thickness 0.5
 
 #: The thickness of the beam cursor (in pts).
 
@@ -301,7 +301,7 @@
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 5000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -713,7 +713,7 @@
 
 #: Terminal bell {{{
 
-enable_audio_bell no
+enable_audio_bell yes
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -951,15 +951,15 @@ bell_on_tab "🔔 "
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge bottom
 
 #: The edge to show the tab bar on, top or bottom.
 
-# tab_bar_margin_width 0.0
+tab_bar_margin_width 0.0
 
 #: The margin to the left and right of the tab bar (in pts).
 
-# tab_bar_margin_height 0.0 0.0
+tab_bar_margin_height 0.0 0.0
 
 #: The margin above and below the tab bar (in pts). The first number
 #: is the margin between the edge of the OS Window and the tab bar.
@@ -1019,12 +1019,12 @@ tab_fade 0.25 0.5 0.75 1
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+ tab_separator " ┇"
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -1042,7 +1042,7 @@ tab_fade 0.25 0.5 0.75 1
 #: The maximum number of cells that can be used to render the text in
 #: a tab. A value of zero means that no limit is applied.
 
-# tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+tab_title_template "{index}:{title} {tab.active_exe}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -1084,7 +1084,7 @@ tab_fade 0.25 0.5 0.75 1
 #: {activity_symbol} are not present in the template, they are
 #: prepended to it.
 
-# active_tab_title_template none
+active_tab_title_template "{index}:{tab.active_exe}"
 
 #: Template to use for active tabs. If not specified falls back to
 #: tab_title_template.
@@ -1103,7 +1103,7 @@ tab_bar_background #2c4141
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
 
-# tab_bar_margin_color none
+tab_bar_margin_color #a46f14
 
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color for margins above and below the tab bar. For side
@@ -1155,7 +1155,7 @@ background #2e3436
 #: platform implements it, so use with care. Currently supported on
 #: macOS and KDE under X11.
 
-# background_image none
+# background_image /home/joona/Pictures/PEGBOARD.jpg
 
 #: Path to a background image. Must be in PNG format.
 
@@ -1757,6 +1757,46 @@ wayland_titlebar_color system
 #: For example::
 
 #:     map ctrl+f>2 set_font_size 20
+
+# <!--- Key Maps --!> #
+
+action_alias launch_tab launch --type=tab --cwd=current
+# ctrl + k - Custom kitten
+map ctrl+k kitten testkitten.py
+
+# F2 - Launch IPython
+map f2 launch_tab ipython
+# ctrl + t - New tab in cwd
+map ctrl+t launch_tab
+
+# Scroll to prompt
+map ctrl+shift+z scroll_to_prompt -1
+map ctrl+shift+x scroll_to_prompt 1
+
+# F1 - 'less' style scroll back
+map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
+
+# ctrl + shift + f1 - Kitty Documentation
+map ctrl+shift+f1 show_kitty_doc overview
+# ctrl + shift + f2 - Edit kitty.conf
+map ctrl+shift+f2 edit_config_file
+# ctrl + shift + esc - kitten shell
+map ctrl+shift+escape kitty_shell window
+
+# Url highlighting
+url_color #FF00FF
+url_style curly
+show_hyperlink_targets no
+underline_hyperlinks always
+
+# Window config
+remember_window_size  yes
+initial_window_width  640
+initial_window_height 400
+# Window border
+window_border_width 5pt
+draw_minimal_borders yes
+active_border_color #FF00FF
 
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
