Refactored a few bash aliases - Modifying the aliases resulted in desired output - Modified kitty.conf     * Added flags for improved performance     * Changed look and feel

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      hack
+# font_family      monospace
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -19,12 +19,18 @@ font_family      hack
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
+font_family      JetBrains Mono
+bold_font        JetBrains Mono Medium
+italic_font      JetBrains Mono Book Italic
+bold_italic_font JetBrains Mono Medium Italic
 
-# font_size 11.0
+font_size 11.0
+
+# Performance
+input_delay 0
+repaint_delay 2
+sync_to_monitor no
+wayland_enable_ime no
 
 #: Font size (in pts)
 
@@ -713,7 +719,7 @@ scrollback_lines 5000
 
 #: Terminal bell {{{
 
-enable_audio_bell yes
+enable_audio_bell none
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -1088,22 +1094,19 @@ active_tab_title_template "{index}:{tab.active_exe}"
 
 #: Template to use for active tabs. If not specified falls back to
 #: tab_title_template.
-
-active_tab_foreground   #000000
-active_tab_background   #05989a
+# active_tab_foreground   #000000
+# active_tab_background   #05989a
 active_tab_font_style   bold-italic
-inactive_tab_foreground #701d63
-inactive_tab_background #2b5c5d
+# inactive_tab_foreground #701d63
+# inactive_tab_background #2b5c5d
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
-
-tab_bar_background #2c4141
+# tab_bar_background #2c4141
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
-
-tab_bar_margin_color #a46f14
+# tab_bar_margin_color #a46f14
 
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color for margins above and below the tab bar. For side
@@ -1113,9 +1116,8 @@ tab_bar_margin_color #a46f14
 #: }}}
 
 #: Color scheme {{{
-
-foreground #b7bab4
-background #2e3436
+# foreground #b7bab4
+# background #2e3436
 
 #: The foreground and background colors.
 
@@ -1578,8 +1580,7 @@ background #2e3436
 #: }}}
 
 #: OS specific tweaks {{{
-
-wayland_titlebar_color system
+# wayland_titlebar_color system
 
 #: The color of the kitty window's titlebar on Wayland systems with
 #: client side window decorations such as GNOME. A value of system
@@ -1784,7 +1785,7 @@ map ctrl+shift+f2 edit_config_file
 map ctrl+shift+escape kitty_shell window
 
 # Url highlighting
-url_color #FF00FF
+# url_color #FF00FF
 url_style curly
 show_hyperlink_targets no
 underline_hyperlinks always
@@ -1796,7 +1797,7 @@ initial_window_height 400
 # Window border
 window_border_width 5pt
 draw_minimal_borders yes
-active_border_color #FF00FF
+# active_border_color #FF00FF
 
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
@@ -2491,3 +2492,9 @@ active_border_color #FF00FF
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# Dimmed Monokai
+include current-theme.conf
+# END_KITTY_THEME
