Renamed some scripts as they were confusing to call. Expanded functionality of bash-helper `sizeof` since the return value was wrong by 10000 bytes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,8 +4,7 @@ bold_font        JetBrains Mono Medium
 italic_font      JetBrains Mono Book Italic
 bold_italic_font JetBrains Mono Medium Italic
 
-font_size 11.0
-
+font_size 10
 # Performance
 input_delay 0
 repaint_delay 2
@@ -18,7 +17,7 @@ action_alias launch_tab launch --type=tab --cwd=current
 map ctrl+k kitten testkitten.py
 
 # ? Launch IPython
-map f2 launch_tab ipython
+map ctrl+f2 launch_tab ipython
 # ? New tab in cwd
 map ctrl+t launch_tab
 
@@ -27,12 +26,12 @@ map ctrl+shift+z scroll_to_prompt -1
 map ctrl+shift+x scroll_to_prompt 1
 
 # ? F1 - 'less' style scroll back
-map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
+map ctrl+f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
 
 # ? Kitty Documentation
 map ctrl+shift+f1 show_kitty_doc overview
 # ?  Edit kitty.conf
-map ctrl+shift+f2 edit_config_file
+map ctrl+shift+f2 "micro ~/.config/kitty/kitty.conf"
 # ?  kitten shell
 map ctrl+shift+escape kitty_shell window
 
@@ -50,9 +49,9 @@ initial_window_width  960
 initial_window_height 540
 
 # ^ Window border
-window_border_width 5pt
-draw_minimal_borders yes
-# active_border_color #FF00FF
+window_border_width 2pt
+draw_minimal_borders no
+active_border_color #0079b5
 
 # ^ Map the specified Unicode codepoints to a particular font
 #  symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
@@ -258,3 +257,4 @@ include current-theme.conf
 #: Color for marks of type 3 (violet)
 
 
+map ctrl+alt+a send_text all Special text
