--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -51,7 +51,7 @@ initial_window_height 540
 # ^ Window border
 window_border_width 2pt
 draw_minimal_borders no
-active_border_color #0079b5
+# active_border_color #0079b5
 
 # ^ Map the specified Unicode codepoints to a particular font
 #  symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
@@ -133,7 +133,7 @@ tab_fade 0.25 0.5 0.75 1
 tab_title_template "{sup.index}:{title} {tab.active_exe}"
 
 # BEGIN_KITTY_THEME
-# Dimmed Monokai
+# Doom One
 include current-theme.conf
 # END_KITTY_THEME
 
