--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 
-font_family      JetBrains Mono
-bold_font        JetBrains Mono Medium
-italic_font      JetBrains Mono Book Italic
-bold_italic_font JetBrains Mono Medium Italic
+font_family      JetBrains Mono 
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
 font_size 10
 # Performance
@@ -113,24 +113,11 @@ tab_bar_style powerline
 tab_powerline_style slanted
 #: angled, slanted, round.
 
-# active_tab_foreground   #000000
-# active_tab_background   #05989a
-active_tab_font_style   bold
-# inactive_tab_foreground #701d63
-# inactive_tab_background #2b5c5d
-inactive_tab_font_style italic
-
-# ? Tab bar colors and styles.
-# tab_bar_background #2c4141
-
-# ? Background color for the tab bar
-# tab_bar_margin_color #a46f14
-
-tab_fade 0.25 0.5 0.75 1
 
 # tab_activity_symbol none
+tab_title_template "{title.split("/")[0]}/{title.split("/")[1]}.../{title.split("/")[-1]} {fmt.bold}{tab.active_exe}{fmt.nobold}"
 
-tab_title_template "{sup.index}:{title} {tab.active_exe}"
+active_tab_title_template "{title.split("/")[0]}/{title.split("/")[1]}.../{title.split("/")[-1]} {fmt.bold}{fmt.fg._d1e2e4}{tab.active_exe}{fmt.fg.tab}{fmt.nobold}"
 
 # BEGIN_KITTY_THEME
 # Doom One
