zsh config initial commit

--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -1,3 +1,6 @@
 {
-    "colorscheme": "one-dark"
+    "autosu": true,
+    "colorscheme": "gruvbox",
+    "hlsearch": true,
+    "matchbracestyle": "highlight"
 }
