Updated bash alias and refactored send-sms function for robustness
The bash alias for send-sms has been updated to match the newly renamed function 'sendsms'. The 'sendsms' function was refactored to search for '.bash_aliases_' not only in the home directory but also under '.dotfiles/'. This aims to handle edge cases when '.bash_aliases_' is not found in the expected location.

The error handling mechanism was also improved within the 'sendsms' function by suppressing file sourcing errors and providing a custom error message.

Furthermore, the PYTHONPATH environment variable in '.shellrc' was expanded to include the 'ColorizeOutput' directory to improve script performance.

These changes improve the overall robustness and reliability of the shell environment setup.

--- a/.shellrc
+++ b/.shellrc
@@ -8,7 +8,7 @@ export __GLX_VENDOR_LIBRARY_NAME=nvidia
 #export MANPAGER="sh -c 'col -x | bat -l man -p'"
 export MOZ_ENABLE_WAYLAND=1
 
-export PYTHONPATH=~/Apps/git/matplotlib-backend-kitty/:~/python/modules/:~/python/scripts/:~/python/scripts/bashhelpers/
+export PYTHONPATH=~/Apps/git/matplotlib-backend-kitty/:~/python/modules/:~/python/scripts/:~/python/scripts/bashhelpers/:~/python/scripts/bashhelpers/ColorizeOutput/
 export PATH="${PATH}:${ANDROID_HOME}/cmdline-tools/latest/bin"
 export PATH=~/.dotfiles/:~/scripts/:~/scripts/graphing/:~/scripts/git_scripts/:~/.local/bin:$PATH:$PYTHONPATH
 
