General cleanup: - [x] replaced broken firefox search alias with s from aur - [x] lsblk color wrapper completed - [x] Fixed kde-connect sms alias - [x] Replaced all single \`[\` and \`]\` in \`bash_functions\`

--- a/.shellrc
+++ b/.shellrc
@@ -1,4 +1,6 @@
 # Env Vars
+
+export HISTFILE=$ZDOTDIR/.zsh_history
 export ANDROID_HOME='/opt/android-sdk'
 export ANDROID_SDK_ROOT='/opt/android-sdk'
 export ELECTRON_OZONE_PLATFORM_HINT=wayland
@@ -52,6 +54,7 @@ fi
 
 # =================================================================#
 
+clear
 fastfetch --color 32 -c ~/.config/fastfetch/others/compact-mod.jsonc
 curl https://icanhazdadjoke.com
 echo ""
