Refactored the following: Added/Modified Files: .bash_functions .shellrc Changes: Refactored bash functions and shellrc file to improve performance and readability. Added OLLAMA_MODELS environment variable to support new feature. Updated help function to provide more detailed information. Removed unnecessary curl call to icanhazdadjoke.com due to new feature support.

--- a/.shellrc
+++ b/.shellrc
@@ -1,5 +1,5 @@
 # Env Vars
-
+export OLLAMA_MODELS=$HOME/.ollama/models/
 export HISTFILE=$ZDOTDIR/.zsh_history
 export ANDROID_HOME='/opt/android-sdk'
 export ANDROID_SDK_ROOT='/opt/android-sdk'
@@ -59,5 +59,3 @@ fi
 clear
 #fastfetch --color 32 -c ~/.config/fastfetch/others/compact-mod.jsonc
 neofetch
-curl https://icanhazdadjoke.com
-echo ""
