Update alias for auto-commit script - Added 'ac' alias to run auto_commit.py in /usr/bin/python3 - Updated gitmsg alias to call 'auto_git_msg' instead of a specific Python script
Update BASH functions file
- Commented out unused code in auto_git_msg function
- Added missing closing parenthesis in man_color function

Update .shellrc file
- Set Git committer name and email for better tracking and accountability

--- a/.shellrc
+++ b/.shellrc
@@ -26,6 +26,9 @@ export MAKEFLAGS="-j$(nproc)"
 export PATH="$PATH"
 
 export PYTHONSTARTUP="/home/joona/.ipython/profile_main/custom_init.py"
+
+GIT_COMMITTER_NAME="J Mujunen"
+GIT_COMMITTER_EMAIL="jMujunen@github.com"
 # =================================================================#
 
 if [ -f ~/.bash_aliases_ ]; then
