Remerged .config/ back to this repo

--- a/ruff.toml
+++ b/ruff.toml
@@ -27,7 +27,8 @@ exclude = [
     "site-packages",
     "venv",
     ".venv",
-    "__pycache"
+    "__pycache__",
+    "*conda*"
 ]
 
 # Same as Black.
@@ -78,3 +79,5 @@ docstring-code-format = true
 # This only has an effect when the `docstring-code-format` setting is
 # enabled.
 docstring-code-line-length = "dynamic"
+
+
