--- a/ruff.toml
+++ b/ruff.toml
@@ -32,9 +32,11 @@ exclude = [
 ]
 
 # Same as Black.
-line-length = 100
+line-length = 110
 indent-width = 4
-
+# Enumerate all fixed violations.
+show-fixes = true
+show-source = true
 # Assume Python 3.8
 target-version = "py312"
 
@@ -42,9 +44,9 @@ target-version = "py312"
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
-select = ["E4", "E7", "E9", "F"]
-#  Avoid enforcing line-length violations (`E501`)
-ignore = ["E501"]
+select = ["E", "F", "W391", "W605", "W291", "W292", "N", "UP001", "UP032", "UP034", "PLE", "PLR", "PLW"]
+#  Avoid enforcing line-length violations (`E501`), explicit encoding
+ignore = ["E501", "E701", "E702", "W1514"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
@@ -79,5 +81,3 @@ docstring-code-format = true
 # This only has an effect when the `docstring-code-format` setting is
 # enabled.
 docstring-code-line-length = "dynamic"
-
-
