--- a/ruff.toml
+++ b/ruff.toml
@@ -32,13 +32,15 @@ exclude = [
 ]
 
 # Same as Black.
-line-length = 110
+line-length = 100
 indent-width = 4
+tab-size = 4
 # Enumerate all fixed violations.
+fix-only = true
 show-fixes = true
 show-source = true
 # Assume Python 3.8
-target-version = "py311"
+target-version = "py312"
 
 [lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
@@ -52,18 +54,70 @@ ignore = ["E501", "E701", "E702", "W1514"]
 fixable = ["ALL"]
 unfixable = []
 
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = true
+# def test(
+#     a,
+#     b,
+# ): pass
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
+line-length = 100
+# Like Black, use double quotes for strings.
+quote-style = "single"
+
+extend-fixable = ["B"]
+
+[lint.extend-per-file-ignores]
+# Also ignore `E402` in all `__init__.py` files.
+"__init__.py" = ["E402"]
+
+[lint.flake8-annotations]
+allow-star-arg-any = true
+
+[lint.flake8-comprehensions]
+allow-dict-calls-with-keyword-arguments = true
+
+[lint.flake8-import-conventions.aliases]
+# Declare the default aliases.
+altair = "alt"
+"matplotlib.pyplot" = "plt"
+numpy = "np"
+pandas = "pd"
+seaborn = "sns"
+scipy = "sp"
+
+[lint.flake8-quotes]
+docstring-quotes = "double"
+multiline-quotes = "double"
+
+[lint.isort]
+extra-standard-library = ["path", "pandas"]
+force-wrap-aliases = true
+combine-as-imports = true
+
+[pycodestyle]
+max-line-length = 100 # E501 reports lines that exceed the length of 100.
+
 [format]
 # Like Black, use double quotes for strings.
-# quote-style = "double"
+quote-style = "single"
 
 # Like Black, indent with spaces, rather than tabs.
 indent-style = "space"
 
 # Like Black, respect magic trailing commas.
-skip-magic-trailing-comma = false
+skip-magic-trailing-comma = true
+# def test(
+#     a,
+#     b,
+# ): pass
 
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
