--- a/.shellrc
+++ b/.shellrc
@@ -29,7 +29,7 @@ export ELECTRON_OZONE_PLATFORM_HINT=wayland
 export GBM_BACKEND=nvidia-drm
 export GDK_BACKEND=wayland
 export __GLX_VENDOR_LIBRARY_NAME=nvidia
-# export MOZ_ENABLE_WAYLAND=1
+export MOZ_ENABLE_WAYLAND=0
 export QSG_RENDERER_LOOP=basic
 export QT_ENABLE_HIGHDPI_SCALING=1
 export QT_QPA_PLATFORM=wayland
